Initial commit (removed secrets)

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,18 @@ yarn-error.*
 # generated native folders
 /ios
 /android
+
+# Ignore the virtual environment
+venv/
+ENV/
+env/
+
+# Ignore Mac system files
+.DS_Store
+
+# Ignore Python cache
+__pycache__/
+*.pyc
+
+
+.env
