--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "^2.11.4",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
+    "axios": "^1.12.2",
     "expo": "~54.0.1",
+    "expo-file-system": "~19.0.19",
+    "expo-image-picker": "~17.0.8",
+    "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.7",
+    "mongodb": "^6.21.0",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   },
   "private": true
 }
